# signaction

./: .dockerignore  .gitignore  =68.0  Dockerfile  README.md  backend_dev.sh  docker-compose.yml  mvp_text_to_sign.py  pyproject.toml  signaction_assets_lexicon.example.json  streamlit_app.py  test_api_response.py  test_import.py
backend/: Dockerfile  main.py  settings.py
backend/routes/: dictionary.py  health.py  speech.py  translator.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: footer.tsx  gesture-sequence-player.tsx  navbar.tsx  providers.tsx  sign-card.tsx  sign-viewer.tsx  speech-recorder.tsx  token-chips.tsx  token-view.tsx  translator-input.tsx
frontend/hooks/: use-dictionary.ts  use-translate.ts
scripts/: KAGGLE_INTEGRATION_GUIDE.md  bootstrap_demo_assets.py  check_assets.py  configure_kaggle_credentials.sh  diagnose_kaggle.py  download_kaggle_dataset.py  download_wlasl.py  fresh_download.sh  import_kaggle_asl_alphabet.py  setup_kaggle.sh  signaction_kaggle_manager.py
signaction/: README_dev.md  app.py  audio.py  cli.py  config.py  exceptions.py  kaggle_helper.py  lexicon.py  mapping.py  nlp.py  pipeline.py  placeholder_assets.py  render.py  translate.py  types.py  web.py
signaction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_kaggle_integration.py  test_lexicon.py  test_nlp.py  test_pipeline_smoke.py  test_translate.py
(+471 files in other folders)
